# tauri-plugin-push-notifications

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: publish-crates.yml  publish-npm.yml
android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/: LocalNotificationPublisher.kt  PushNotificationsPlugin.kt  PushNotificationsService.kt
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: PushNotificationsPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: cancel_local.toml  get_pending_local.toml  register_for_push.toml  schedule_local.toml  start_notification_events.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
